tests/integration/features/sdoc/document_grammar/validation/30_composite_node_not_declared_in_grammar/test.itest
# FIXME: Activate this when the [[NODE]] migration is finished and the
#        old [SECTION] is removed from the codebase.
UNSUPPORTED: true

RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Invalid node type: SECTION.
CHECK: Location: {{.*}}input.sdoc:12:1
